--- a/index.html
+++ b/index.html
@@ -2,112 +2,117 @@
 <html lang="en">
 
 <head>
-    <title></title>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="style.css" rel="stylesheet">
-    <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
-    <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css"rel="stylesheet">
-    <script type="text/javascript" src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
-    
+  <title></title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="style.css" rel="stylesheet">
+  <link rel="stylesheet" type="text/css" href="./style.css?version=1" />
+  <script src="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/js/splide.min.js"></script>
+  <link href="https://cdn.jsdelivr.net/npm/@splidejs/splide@4.1.4/dist/css/splide.min.css" rel="stylesheet">
+  <script type="text/javascript"
+    src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
+
 </head>
 
 <body>
 
   <div class="parte-invariata">
-      <div class="header">
-        <div class="butn-menu"><input type="checkbox" role="button" aria-label="Display the menu" class="menu"></div>
-        <div class="logo">
-          <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
-        </div>
-        <div class="nav-bar">
-            <ul>
-                <a class="elemento-lista" style ="color: #5C6B5F;" href="./">Home<a>
-                        <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" href="./menu.html"></a>
-                                <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista" href="./about.html"></a>
-                                        <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href="./gallery.html"></a>
-                                                <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista" href="./contact.html"></a>
-            </ul>
-        </div>
-
-        <div class="lingua">
-            <input type="button" value="EN" class="button" id="en"> <input type="button" value="IT" class="button" id="it">
-        </div>  
+    <div class="header">
+      <div class="butn-menu"><input type="checkbox" role="button" aria-label="Display the menu" class="menu"></div>
+      <div class="logo">
+        <img class="logo" href="" src="./Assets/Images/logo_whitebg.png">
+      </div>
+      <div class="nav-bar">
+        <ul>
+          <a class="elemento-lista" style="color: #5C6B5F;" href="./">Home<a>
+              <a data-translate="Menù" data-translateIt="Menù" class="elemento-lista" href="./menu.html"></a>
+              <a data-translate="About Us" data-translateIt="La nostra storia" class="elemento-lista"
+                href="./about.html"></a>
+              <a data-translate="Gallery" data-translateIt="Gallery" class="elemento-lista" href="./gallery.html"></a>
+              <a data-translate="Contact Us" data-translateIt="Contatti" class="elemento-lista"
+                href="./contact.html"></a>
+        </ul>
       </div>
 
+      <div class="lingua">
+        <input type="button" value="EN" class="button" id="en"> <input type="button" value="IT" class="button" id="it">
+      </div>
+    </div>
+
     <div class="container-immagine">
-        <div class="text-image">SPAN</div>
-        <div data-translate="Welcome to" data-translateIt="Benvenuto da"  class="sottotitolo-home"></div>
-        <div class="subtitle">Società Pizzaioli Anonimi Napoletani</div>
-        <div class="sottotitolo-ovale-home"></div>
-        <div class="sottotitolo-subtext"> 
-            <img class="freccia" src="./Assets/Images/freccia.png"> 
-            <div data-translate="We welcome you to a cozy Italian pizzeria, where every piece of pizza is a
+      <div class="text-image">SPAN</div>
+      <div data-translate="Welcome to" data-translateIt="Benvenuto da" class="sottotitolo-home"></div>
+      <div class="subtitle">Società Pizzaioli Anonimi Napoletani</div>
+      <div class="sottotitolo-ovale-home"></div>
+      <div class="sottotitolo-subtext">
+        <img class="freccia" src="./Assets/Images/freccia.png">
+        <div data-translate="We welcome you to a cozy Italian pizzeria, where every piece of pizza is a
             real work of art. Discover the authentic taste of Neapolitan cuisine, which
             embodies centuries of tradition and passion for quality. Let's create an
             unforgettable pizza experience together!" data-translateIt="Ti diamo il benvenuto in un'accogliente pizzeria italiana, dove ogni pezzo di pizza è un
             vera opera d'arte. Scopri il gusto autentico della cucina napoletana, che
             racchiude secoli di tradizione e passione per la qualità. Creiamo un
             esperienza indimenticabile di pizza insieme!" class="subtext"></div>
-        </div>
-        <img class="immagine-home" src="./Assets/Images/home.jpg">
+      </div>
+      <img class="immagine-home" src="./Assets/Images/home.jpg">
     </div>
   </div>
   <div class="menu-sec">
     <div class="menu-subsec">
-    <div class="men-texts">
-      <div class="men-logo">
-        <div class="men-title">Menù</div>
-        <div class="men-ovale"></div>
-      </div>
+      <div class="men-texts">
+        <div class="men-logo">
+          <div class="men-title">Menù</div>
+          <div class="men-ovale"></div>
+        </div>
         <div data-translate="Our exquisite range of dishes features carefully selected recipes that capture the authentic
         taste of Neapolitan pizza. From classic options to unique ingredient combinations, our
         menu will satisfy every taste and offer an unforgettable gastronomic journey." data-translateIt="La nostra squisita gamma di piatti presenta ricette accuratamente selezionate che catturano l'autenticità
         gusto della pizza napoletana. Dalle opzioni classiche alle combinazioni di ingredienti uniche, il nostro
         il menu soddisferà tutti i gusti e offrirà un viaggio gastronomico indimenticabile." class="men-subtext"></div>
-    </div>
-        <div class="spacer"></div>
+      </div>
+      <div class="spacer"></div>
       <div class="pizzas">
         <div class="pizza">
-            <div class="pizza-img">
-              <img src="./Assets/Images/fiocco.png" alt="">
-            </div>
-            <div class="pizza-name">FIOCCO</div>
+          <div class="pizza-img">
+            <img src="./Assets/Images/fiocco.png" alt="">
+          </div>
+          <div class="pizza-name">FIOCCO</div>
         </div>
         <div class="pizza">
-            <div class="pizza-img">
-              <img src="./Assets/Images/dypolla.png" alt="">
-            </div>
-            <div class="pizza-name">DYPOLLA</div>
+          <div class="pizza-img">
+            <img src="./Assets/Images/dypolla.png" alt="">
+          </div>
+          <div class="pizza-name">DYPOLLA</div>
         </div>
         <div class="pizza">
-            <div class="pizza-img">
-              <img src="./Assets/Images/mastoantonio.png" alt="">
-            </div>
-            <div class="pizza-name">MASTOANTONIO</div>
+          <div class="pizza-img">
+            <img src="./Assets/Images/mastoantonio.png" alt="">
+          </div>
+          <div class="pizza-name">MASTOANTONIO</div>
         </div>
         <div class="pizza">
-            <div class="pizza-img">
-              <img src="./Assets/Images/brusco.jpg" alt="">
-            </div>
-            <div class="pizza-name">BRUSCO</div>
+          <div class="pizza-img">
+            <img src="./Assets/Images/brusco.jpg" alt="">
+          </div>
+          <div class="pizza-name">BRUSCO</div>
         </div>
       </div>
       <div class="btn-container">
-      <div class="btn">
-        <a href="./menu.html" data-translate="SEE MENU" data-translateIt="VAI AL MENU'"></a>
+        <div class="btn">
+          <a href="./menu.html" data-translate="SEE MENU" data-translateIt="VAI AL MENU'"></a>
+        </div>
+      </div>
     </div>
   </div>
-  </div>
-</div>
   <div class="about-sec">
     <div class="ab-start">
       <div class="ab-textlogo">
         <div class="ab-text" data-translate="About Us" data-translateIt="La nostra storia"></div>
         <div class="ab-ovale"></div>
       </div>
-      <div class="ab-subtext" data-translate="SPAN is not just a pizzeria, it is a story of passion and dedication to tradition." data-translateIt="SPAN non è solo una pizzeria, è una storia di passione e dedizione alla tradizione."></div>
+      <div class="ab-subtext"
+        data-translate="SPAN is not just a pizzeria, it is a story of passion and dedication to tradition."
+        data-translateIt="SPAN non è solo una pizzeria, è una storia di passione e dedizione alla tradizione."></div>
     </div>
     <div class="ab-image"><img src="./Assets/Images/mortadella.jpg" alt=""></div>
     <div class="ab-end">
@@ -115,7 +120,10 @@
         <div class="ab-ovale-end"></div>
         <div class="ab-text-end" data-translate="Since 2019" data-translateIt="Dal 2019"></div>
       </div>
-      <div class="ab-subtext-end" data-translate="We have opened the doors of our establishment in the heart of Bologna to give guests an authentic taste of Neapolitan cuisine. We are proud of our history and appreciate every moment spent creating unique dishes for our customers." data-translateIt="Abbiamo aperto le porte del nostro locale nel cuore di Bologna per regalare agli ospiti il ​​gusto autentico della cucina partenopea. Siamo orgogliosi della nostra storia e apprezziamo ogni momento trascorso a creare piatti unici per i nostri clienti."></div>
+      <div class="ab-subtext-end"
+        data-translate="We have opened the doors of our establishment in the heart of Bologna to give guests an authentic taste of Neapolitan cuisine. We are proud of our history and appreciate every moment spent creating unique dishes for our customers."
+        data-translateIt="Abbiamo aperto le porte del nostro locale nel cuore di Bologna per regalare agli ospiti il ​​gusto autentico della cucina partenopea. Siamo orgogliosi della nostra storia e apprezziamo ogni momento trascorso a creare piatti unici per i nostri clienti.">
+      </div>
     </div>
   </div>
   <div class="gallery-sec">
@@ -126,18 +134,20 @@
           <div class="gallery-ovale"></div>
         </div>
         <div class="gallery-subtexts" data-translate="Let's experience the atmosphere of SPAN
-        together through our gallery." data-translateIt="Viviamo l'atmosfera di SPAN insieme attraverso la nostra gallery.">
-          
+        together through our gallery."
+          data-translateIt="Viviamo l'atmosfera di SPAN insieme attraverso la nostra gallery.">
+
         </div>
         <div class="gallery-btn">
-          <div class="gallery-btn-cont"><a href="./gallery.html" data-translate="VIEW GALLERY" data-translateIt="VAI ALLA GALLERY"></a></div>
+          <div class="gallery-btn-cont"><a href="./gallery.html" data-translate="VIEW GALLERY"
+              data-translateIt="VAI ALLA GALLERY"></a></div>
         </div>
       </div>
 
       <div class="gallery-photos">
         <div class="gallery-photo1">
           <img src="./Assets/Images/sanvalentino.jpg" alt="">
-        </div>  
+        </div>
         <div class="gallery-photo23">
           <div class="gallery-photo2">
             <img src="./Assets/Images/fiocco.png" alt="">
@@ -155,8 +165,12 @@
   </div>
   <div class="contact-sec">
     <div class="contact-texts">
-      <div class="contact-text1" data-translate="WE ARE ALWAYS HAPPY TO COMMUNICATE WITH OUR GUESTS!" data-translateIt="SIAMO SEMPRE LIETI DI COMUNICARE CON I NOSTRI OSPITI!"></div>
-      <div class="contact-text2" data-translate="Feel free to contact us to make a table reservation, arrange delivery, or just to share your impressions of our pizza." data-translateIt="Non esitate a contattarci per prenotare un tavolo, organizzare la consegna o semplicemente per condividere le vostre impressioni sulla nostra pizza."></div>
+      <div class="contact-text1" data-translate="WE ARE ALWAYS HAPPY TO COMMUNICATE WITH OUR GUESTS!"
+        data-translateIt="SIAMO SEMPRE LIETI DI COMUNICARE CON I NOSTRI OSPITI!"></div>
+      <div class="contact-text2"
+        data-translate="Feel free to contact us to make a table reservation, arrange delivery, or just to share your impressions of our pizza."
+        data-translateIt="Non esitate a contattarci per prenotare un tavolo, organizzare la consegna o semplicemente per condividere le vostre impressioni sulla nostra pizza.">
+      </div>
     </div>
     <div class="contact-button">
       <a href="./contact.html" data-translate="CONTACT US" data-translateIt="CONTATTACI"></a>
@@ -168,23 +182,31 @@
 
 
   <footer>
-      <div class="informative">
-        <a href="https://www.iubenda.com/privacy-policy/23582678" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
-        |
-        <a href="https://www.iubenda.com/privacy-policy/23582678/cookie-policy" class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a><script type="text/javascript">(function (w,d) {var loader = function () {var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src="https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s,tag);}; if(w.addEventListener){w.addEventListener("load", loader, false);}else if(w.attachEvent){w.attachEvent("onload", loader);}else{w.onload = loader;}})(window, document);</script>
-        |
-        Pizza Span S.r.l.s
-        |
-        Via Salita Arenella,43
-        |
-        80129
-        |
-        Napoli
-      </div>
-      <div class="piva">
-       P.Iva: 10032741216
-      </div>
-    </footer>
+    <div class="informative">
+      <a href="https://www.iubenda.com/privacy-policy/23582678"
+        class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Privacy Policy ">Privacy
+        Policy</a>
+      <script
+        type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
+      |
+      <a href="https://www.iubenda.com/privacy-policy/23582678/cookie-policy"
+        class="iubenda-black iubenda-noiframe iubenda-embed iubenda-noiframe " title="Cookie Policy ">Cookie Policy</a>
+      <script
+        type="text/javascript">(function (w, d) { var loader = function () { var s = d.createElement("script"), tag = d.getElementsByTagName("script")[0]; s.src = "https://cdn.iubenda.com/iubenda.js"; tag.parentNode.insertBefore(s, tag); }; if (w.addEventListener) { w.addEventListener("load", loader, false); } else if (w.attachEvent) { w.attachEvent("onload", loader); } else { w.onload = loader; } })(window, document);</script>
+      |
+      Pizza Span S.r.l.s
+      |
+      Via Salita Arenella,43
+      |
+      80129
+      |
+      Napoli
+    </div>
+    <div class="piva">
+      P.Iva: 10032741216
+    </div>
+  </footer>
 </body>
-  <script type="text/javascript" src="./script1.js"></script>
+<script type="text/javascript" src="./script1.js"></script>
+
 </html>
